Mon Jan 18 13:55:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be_include/be_operation_strategy.h:
          Fixed typo in comment

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
          Generate local interfaces

Mon Jan 18 13:16:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
          Only one exit point in the method

Mon Jan 18 12:19:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO/be/be_attribute.cpp:
        * TAO/be_include/be_attribute.h:
          Added original_attribute member

        * TAO/be/be_operation.cpp:
        * TAO/be_include/be_operation.h:
          Added original_operation attribute member

Mon Jan 18 10:00:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL_Test.mpc:
          Put all stubs an skeleton in a DLL and added two projects to
          compile all TAO test idl files also with the RTI ddsgen tool
          when that is enabled. All idl files and generated code that
          cause warnings and/or errors are disabled and reported back
          to RTI.

Sun Jan 17 20:05:43 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Increase the sleep() value to allow this test to pass on the
          iPhone Simulator.

Sun Jan 17 19:59:45 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/ImplRepo/scale/run_test.pl:

          Increase the sleep() value to allow this test to pass on the
          iPhone Simulator.

Sun Jan 17 19:50:33 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/ImplRepo/ReconnectServer/run_test.pl:

          Increase the sleep() value to allow this test to pass on the
          iPhone Simulator.

Sun Jan 17 19:42:25 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/Log/Basic_Log_Test/run_test.pl:
