@@ -62,5 +62,4 @@ be_uses::original_uses (void)
   return this->original_uses_;
 }
 
-
 IMPL_NARROW_FROM_DECL (be_uses)
